# MalSpector

./: CMakeLists.txt  README.md  file_open.h  file_parser.h  main.cpp  pe_headers.cpp  pe_headers.h  setup.sh
